@@ -248,8 +248,8 @@ Image::Checkerboard - Image generator for checkboards.
 
 =begin html
 
-<a href="https://raw.githubusercontent.com/tupinek/Image-Checkerboard/master/images/ex1.png">
-  <img src="https://raw.githubusercontent.com/tupinek/Image-Checkerboard/master/images/ex1.png" alt="Generated image" width="533px" height="300px" />
+<a href="https://raw.githubusercontent.com/michal-josef-spacek/Image-Checkerboard/master/images/ex1.png">
+  <img src="https://raw.githubusercontent.com/michal-josef-spacek/Image-Checkerboard/master/images/ex1.png" alt="Generated image" width="533px" height="300px" />
 </a>
 
 =end html
@@ -277,7 +277,7 @@ Perl class for creating random image.
 
 =head1 REPOSITORY
 
-L<https://github.com/tupinek/Image-Checkerboard>.
+L<https://github.com/michal-josef-spacek/Image-Checkerboard>.
 
 =head1 AUTHOR
 
