@@ -25,8 +25,8 @@ requires 'List::MoreUtils' => 0;
 requires 'perl' => '5.6.0';
 resources 'bugtracker' => 'https://rt.cpan.org/Public/Dist/Display.html'.
 	'?Name=Image-Checkerboard';
-resources 'homepage' => 'https://github.com/tupinek/Image-Checkerboard';
-resources 'repository' => 'git://github.com/tupinek/Image-Checkerboard';
+resources 'homepage' => 'https://github.com/michal-josef-spacek/Image-Checkerboard';
+resources 'repository' => 'git://github.com/michal-josef-spacek/Image-Checkerboard';
 test_requires 'English' => 0;
 test_requires 'Error::Pure::Utils' => 0.22;
 test_requires 'Test::More' => 0;
