@@ -107,7 +107,7 @@ SEE ALSO
         Perl class for creating random image.
 
 REPOSITORY
-    <https://github.com/tupinek/Image-Checkerboard>.
+    <https://github.com/michal-josef-spacek/Image-Checkerboard>.
 
 AUTHOR
     Michal Josef Špaček <mailto:skim@cpan.org>
