@@ -2,6 +2,7 @@
  - Fix Makefile.PL fails with no '.' in @INC.
  - Update .travis.yml to reality.
  - Update Module::Install to 1.19 version.
+ - Update author github username.
  - Update author name.
  - Update copyright years.
 
